assignment1-ver1.1/assignment1/initial/target/main/csel/parser/CSELParser.py
# Generated from main/csel/parser/CSEL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSELParser ( Parser ):

    grammarFileName = "CSEL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Break'", "'Continue'", "'If'", "'Elif'", 
                     "'Else'", "'While'", "'For'", "'Of'", "'In'", "'Function'", 
                     "'Let'", "'True'", "'False'", "'Call'", "'Return'", 
                     "'Number'", "'Boolean'", "'String'", "'Json'", "'Array'", 
                     "'Constant'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
                     "'&'", "'&&'", "'||'", "'='", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'==.'", "'+.'", "')'", "'('", 
                     "']'", "'['", "'{'", "'}'", "';'", "'.'", "':'", "','", 
                     "'$'" ]

    symbolicNames = [ "<INVALID>", "ID_SIGN", "ID_NOT_SIGN", "NUMBER_LIT", 
                      "BLOCK_COMMENT", "BREAK", "CONTINUE", "IF", "ELIF", 
                      "ELSE", "WHILE", "FOR", "OF", "IN", "FUNCTION", "LET", 
                      "TRUE", "FALSE", "CALL", "RETURN", "NUMBER", "BOOLEAN", 
                      "STRING", "JSON", "ARRAY", "CONSTANT", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "NOT", "AMP", "AND", "OR", "EQUAL", 
                      "ASS", "DIF", "BGT", "LGT", "BGZ", "LGZ", "COM", "CAT", 
                      "RCC", "LCC", "RSQ", "LSQ", "LS", "RS", "SM", "DOT", 
                      "COLON", "CM", "DOL", "WS", "STRING_LIT", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT", "ID", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_iden = 1
    RULE_vardecl = 2
    RULE_elem = 3
    RULE_array_decl = 4
    RULE_id_array = 5
    RULE_json_decl = 6
    RULE_functiondecl = 7
    RULE_parameters = 8
    RULE_parameter = 9
    RULE_body = 10
    RULE_stmt = 11
    RULE_assign_stmt = 12
    RULE_if_stmt = 13
    RULE_condi = 14
    RULE_stmt_list = 15
    RULE_for_stmt = 16
    RULE_for_in = 17
    RULE_for_of = 18
    RULE_while_stmt = 19
    RULE_break_stmt = 20
    RULE_continue_stmt = 21
    RULE_call_stmt = 22
    RULE_return_stmt = 23
    RULE_array_boolean = 24
    RULE_array_num = 25
    RULE_array_str = 26
    RULE_array_json = 27
    RULE_array_arr = 28
    RULE_new_val = 29
    RULE_constantdecl = 30
    RULE_booleanexp = 31
    RULE_stringexp = 32
    RULE_numexp = 33
    RULE_function_call = 34
    RULE_function_call_el = 35
    RULE_expression = 36
    RULE_expression9 = 37
    RULE_expression1 = 38
    RULE_expression2 = 39
    RULE_expression3 = 40
    RULE_expression4 = 41
    RULE_expression5 = 42
    RULE_expression6 = 43
    RULE_expression7 = 44
    RULE_expression8 = 45
    RULE_literals = 46
    RULE_boolean_lit = 47
    RULE_json_lit = 48
    RULE_elem_json = 49
    RULE_array_lit = 50
    RULE_type_arr = 51
    RULE_adding = 52
    RULE_multiplying = 53
    RULE_logical = 54
    RULE_relational = 55
    RULE_stri = 56

    ruleNames =  [ "program", "iden", "vardecl", "elem", "array_decl", "id_array", 
                   "json_decl", "functiondecl", "parameters", "parameter", 
                   "body", "stmt", "assign_stmt", "if_stmt", "condi", "stmt_list", 
                   "for_stmt", "for_in", "for_of", "while_stmt", "break_stmt", 
                   "continue_stmt", "call_stmt", "return_stmt", "array_boolean", 
                   "array_num", "array_str", "array_json", "array_arr", 
                   "new_val", "constantdecl", "booleanexp", "stringexp", 
                   "numexp", "function_call", "function_call_el", "expression", 
                   "expression9", "expression1", "expression2", "expression3", 
                   "expression4", "expression5", "expression6", "expression7", 
                   "expression8", "literals", "boolean_lit", "json_lit", 
                   "elem_json", "array_lit", "type_arr", "adding", "multiplying", 
                   "logical", "relational", "stri" ]

    EOF = Token.EOF
    ID_SIGN=1
    ID_NOT_SIGN=2
    NUMBER_LIT=3
    BLOCK_COMMENT=4
    BREAK=5
    CONTINUE=6
    IF=7
    ELIF=8
    ELSE=9
    WHILE=10
    FOR=11
    OF=12
    IN=13
    FUNCTION=14
    LET=15
    TRUE=16
    FALSE=17
    CALL=18
    RETURN=19
    NUMBER=20
    BOOLEAN=21
    STRING=22
    JSON=23
    ARRAY=24
    CONSTANT=25
    ADD=26
    SUB=27
    MUL=28
    DIV=29
    MOD=30
    NOT=31
    AMP=32
    AND=33
    OR=34
    EQUAL=35
    ASS=36
    DIF=37
    BGT=38
    LGT=39
    BGZ=40
    LGZ=41
    COM=42
    CAT=43
    RCC=44
    LCC=45
    RSQ=46
    LSQ=47
    LS=48
    RS=49
    SM=50
    DOT=51
    COLON=52
    CM=53
    DOL=54
    WS=55
    STRING_LIT=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58
    UNTERMINATED_COMMENT=59
    ID=60
    ERROR_CHAR=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSELParser.EOF, 0)

        def vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.VardeclContext)
            else:
                return self.getTypedRuleContext(CSELParser.VardeclContext,i)


        def functiondecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.FunctiondeclContext)
            else:
                return self.getTypedRuleContext(CSELParser.FunctiondeclContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CSELParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.FUNCTION or _la==CSELParser.LET:
                self.state = 116
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CSELParser.LET]:
                    self.state = 114
                    self.vardecl()
                    pass
                elif token in [CSELParser.FUNCTION]:
                    self.state = 115
                    self.functiondecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.match(CSELParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdenContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_SIGN(self):
            return self.getToken(CSELParser.ID_SIGN, 0)

        def ID_NOT_SIGN(self):
            return self.getToken(CSELParser.ID_NOT_SIGN, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_iden

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIden" ):
                return visitor.visitIden(self)
            else:
                return visitor.visitChildren(self)




    def iden(self):

        localctx = CSELParser.IdenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_iden)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            _la = self._input.LA(1)
            if not(_la==CSELParser.ID_SIGN or _la==CSELParser.ID_NOT_SIGN):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(CSELParser.LET, 0)

        def elem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.ElemContext)
            else:
                return self.getTypedRuleContext(CSELParser.ElemContext,i)


        def SM(self):
            return self.getToken(CSELParser.SM, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = CSELParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(CSELParser.LET)
            self.state = 126
            self.elem()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.CM:
                self.state = 127
                self.match(CSELParser.CM)
                self.state = 128
                self.elem()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(CSELParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def iden(self):
            return self.getTypedRuleContext(CSELParser.IdenContext,0)


        def COLON(self):
            return self.getToken(CSELParser.COLON, 0)

        def type_arr(self):
            return self.getTypedRuleContext(CSELParser.Type_arrContext,0)


        def EQUAL(self):
            return self.getToken(CSELParser.EQUAL, 0)

        def literals(self):
            return self.getTypedRuleContext(CSELParser.LiteralsContext,0)


        def expression(self):
            return self.getTypedRuleContext(CSELParser.ExpressionContext,0)


        def array_decl(self):
            return self.getTypedRuleContext(CSELParser.Array_declContext,0)


        def json_decl(self):
            return self.getTypedRuleContext(CSELParser.Json_declContext,0)


        def constantdecl(self):
            return self.getTypedRuleContext(CSELParser.ConstantdeclContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_elem

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElem" ):
                return visitor.visitElem(self)
            else:
                return visitor.visitChildren(self)




    def elem(self):

        localctx = CSELParser.ElemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_elem)
        self._la = 0 # Token type
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.iden()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CSELParser.COLON:
                    self.state = 137
                    self.match(CSELParser.COLON)
                    self.state = 138
                    self.type_arr()


                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CSELParser.EQUAL:
                    self.state = 141
                    self.match(CSELParser.EQUAL)
                    self.state = 144
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        self.state = 142
                        self.literals()
                        pass

                    elif la_ == 2:
                        self.state = 143
                        self.expression(0)
                        pass




                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.array_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.json_decl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 150
                self.constantdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_array(self):
            return self.getTypedRuleContext(CSELParser.Id_arrayContext,0)


        def COLON(self):
            return self.getToken(CSELParser.COLON, 0)

        def type_arr(self):
            return self.getTypedRuleContext(CSELParser.Type_arrContext,0)


        def EQUAL(self):
            return self.getToken(CSELParser.EQUAL, 0)

        def array_lit(self):
            return self.getTypedRuleContext(CSELParser.Array_litContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_array_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_decl" ):
                return visitor.visitArray_decl(self)
            else:
                return visitor.visitChildren(self)




    def array_decl(self):

        localctx = CSELParser.Array_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_array_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.id_array()
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COLON:
                self.state = 154
                self.match(CSELParser.COLON)
                self.state = 155
                self.type_arr()


            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.EQUAL:
                self.state = 158
                self.match(CSELParser.EQUAL)
                self.state = 159
                self.array_lit()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def iden(self):
            return self.getTypedRuleContext(CSELParser.IdenContext,0)


        def LSQ(self):
            return self.getToken(CSELParser.LSQ, 0)

        def RSQ(self):
            return self.getToken(CSELParser.RSQ, 0)

        def literals(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.LiteralsContext)
            else:
                return self.getTypedRuleContext(CSELParser.LiteralsContext,i)


        def call_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Call_stmtContext)
            else:
                return self.getTypedRuleContext(CSELParser.Call_stmtContext,i)


        def CM(self):
            return self.getToken(CSELParser.CM, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_id_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_array" ):
                return visitor.visitId_array(self)
            else:
                return visitor.visitChildren(self)




    def id_array(self):

        localctx = CSELParser.Id_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.iden()
            self.state = 163
            self.match(CSELParser.LSQ)
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.NUMBER_LIT, CSELParser.TRUE, CSELParser.FALSE, CSELParser.LSQ, CSELParser.LS, CSELParser.STRING_LIT]:
                self.state = 164
                self.literals()
                pass
            elif token in [CSELParser.CALL]:
                self.state = 165
                self.call_stmt()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.CM:
                self.state = 168
                self.match(CSELParser.CM)
                self.state = 171
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CSELParser.NUMBER_LIT, CSELParser.TRUE, CSELParser.FALSE, CSELParser.LSQ, CSELParser.LS, CSELParser.STRING_LIT]:
                    self.state = 169
                    self.literals()
                    pass
                elif token in [CSELParser.CALL]:
                    self.state = 170
                    self.call_stmt()
                    pass
                else:
                    raise NoViableAltException(self)



            self.state = 175
            self.match(CSELParser.RSQ)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Json_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def iden(self):
            return self.getTypedRuleContext(CSELParser.IdenContext,0)


        def EQUAL(self):
            return self.getToken(CSELParser.EQUAL, 0)

        def json_lit(self):
            return self.getTypedRuleContext(CSELParser.Json_litContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_json_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJson_decl" ):
                return visitor.visitJson_decl(self)
            else:
                return visitor.visitChildren(self)




    def json_decl(self):

        localctx = CSELParser.Json_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_json_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.iden()
            self.state = 178
            self.match(CSELParser.EQUAL)
            self.state = 179
            self.json_lit()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctiondeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(CSELParser.FUNCTION, 0)

        def iden(self):
            return self.getTypedRuleContext(CSELParser.IdenContext,0)


        def parameters(self):
            return self.getTypedRuleContext(CSELParser.ParametersContext,0)


        def LS(self):
            return self.getToken(CSELParser.LS, 0)

        def body(self):
            return self.getTypedRuleContext(CSELParser.BodyContext,0)


        def RS(self):
            return self.getToken(CSELParser.RS, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_functiondecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctiondecl" ):
                return visitor.visitFunctiondecl(self)
            else:
                return visitor.visitChildren(self)




    def functiondecl(self):

        localctx = CSELParser.FunctiondeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_functiondecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(CSELParser.FUNCTION)
            self.state = 182
            self.iden()
            self.state = 183
            self.parameters()
            self.state = 184
            self.match(CSELParser.LS)
            self.state = 185
            self.body()
            self.state = 186
            self.match(CSELParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCC(self):
            return self.getToken(CSELParser.LCC, 0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.ParameterContext)
            else:
                return self.getTypedRuleContext(CSELParser.ParameterContext,i)


        def RCC(self):
            return self.getToken(CSELParser.RCC, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_parameters

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = CSELParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.match(CSELParser.LCC)
            self.state = 189
            self.parameter()
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.CM:
                self.state = 190
                self.match(CSELParser.CM)
                self.state = 191
                self.parameter()
                self.state = 196
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 197
            self.match(CSELParser.RCC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def iden(self):
            return self.getTypedRuleContext(CSELParser.IdenContext,0)


        def expression6(self):
            return self.getTypedRuleContext(CSELParser.Expression6Context,0)


        def getRuleIndex(self):
            return CSELParser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = CSELParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 201
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 199
                self.iden()

            elif la_ == 2:
                self.state = 200
                self.expression6(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.VardeclContext)
            else:
                return self.getTypedRuleContext(CSELParser.VardeclContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.StmtContext)
            else:
                return self.getTypedRuleContext(CSELParser.StmtContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):
